text-align-error fixed

--- a/countdowntimer/src/App.css
+++ b/countdowntimer/src/App.css
@@ -31,7 +31,6 @@ position: absolute;
     flex-direction: column;
     align-items: center;
     height: 100%;
-    width: 100%;
     margin: 20px;
 }
 
